# openapi-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build-json.sh  bundle.js  package.json  shell.jsh  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
controller/: README.md  demo.yaml  main.js  package.json
controller/runtime/: index.js
image/: .gitignore  Cargo.toml  Makefile  bundle.js  package.json  pom.xml
image/runtime/: index.js
image/src/: lib.rs
image/src/models/: v1_image.rs  v1_image_list.rs  v1_image_spec.rs
runtime/: .gitignore  Cargo.toml  Makefile  index.js
runtime/src/: main.rs
src/: lib.rs
src/models/: mod.rs  v1_image_status.rs
wasm/: Cargo.toml  Makefile  README.md  bundle.js
wasm/src/: lib.rs
