[package]
name = "image"
version = "0.1.0"
authors = ["Dave Syer <dsyer@vmware.com>"]
edition = "2018"

[lib]
name = "image"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "^0.3.57"
wasm-bindgen = "^0.2.80"
wasm-bindgen-futures = "0.4.30"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"
