[package]
name = "image"
version = "0.1.0"
authors = ["Dave Syer <dsyer@vmware.com>"]
edition = "2018"

[lib]
name = "image"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "^0.3.57"
k8s-openapi = { version = "0.14.0", features = ["v1_19"], default-features = false }

schemars = { version = "0.8.8", features = ["chrono"] }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8.23"

wasm-bindgen = "^0.2.80"
wasm-bindgen-futures = "0.4.30"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"
