[package]
name = "openapi-rust"
version = "0.1.0"
authors = ["Dave Syer <dsyer@vmware.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k8s-openapi = { version = "0.14.0", features = ["v1_19"], default-features = false }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

wasm-bindgen = "^0.2.80"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false